[gd_scene load_steps=5 format=3 uid="uid://bext4in78rfy6"]

[ext_resource type="Script" uid="uid://dug71s0nsj5gy" path="res://instances/pnl_twitch_user_list.gd" id="1_5rx57"]
[ext_resource type="Texture2D" uid="uid://btxmsw1wv5ai2" path="res://ui/bootstrap_icons/arrow-repeat.svg" id="2_y1dcg"]
[ext_resource type="Texture2D" uid="uid://boa5ns6c4c07k" path="res://ui/bootstrap_icons/twitch.svg" id="3_q20ft"]
[ext_resource type="PackedScene" uid="uid://biy3s0e3yb44c" path="res://instances/pnl_loading_simple.tscn" id="4_lsxhr"]

[node name="pnl_twitch_user_list" type="PanelContainer"]
custom_minimum_size = Vector2(460, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1453.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_5rx57")

[node name="hb" type="HSplitContainer" parent="."]
layout_mode = 2

[node name="vb" type="VBoxContainer" parent="hb"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5

[node name="hb" type="HBoxContainer" parent="hb/vb"]
layout_mode = 2

[node name="ln_filter" type="LineEdit" parent="hb/vb/hb"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "filter"

[node name="btn_reload" type="Button" parent="hb/vb/hb"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("2_y1dcg")
expand_icon = true

[node name="btn_filter_live" type="Button" parent="hb/vb/hb"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("3_q20ft")
expand_icon = true

[node name="pnl_loading_live" parent="hb/vb/hb/btn_filter_live" instance=ExtResource("4_lsxhr")]
unique_name_in_owner = true
layout_mode = 1

[node name="scroll" type="ScrollContainer" parent="hb/vb"]
layout_mode = 2
size_flags_vertical = 3

[node name="user_list" type="VBoxContainer" parent="hb/vb/scroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="text_changed" from="hb/vb/hb/ln_filter" to="." method="_on_ln_filter_text_changed"]
[connection signal="pressed" from="hb/vb/hb/btn_reload" to="." method="_on_btn_reload_pressed"]
[connection signal="pressed" from="hb/vb/hb/btn_filter_live" to="." method="_on_btn_filter_live_pressed"]
